tests/fail/fail_fun_count1.bb
float spike(bool x, int y, float z)
  if x
    say y
    return z * 2.0
  fin
fin

spike(true, 5)
